--- a/templates/admin/admin_nav.html
+++ b/templates/admin/admin_nav.html
@@ -15,9 +15,11 @@
         </li>
 
         {{if .is_authenticated}}
+        {{if and .logs .user.is_admin}}
         <li>
           <a {{if eq .request.URL.Path "/logs" }}class="active"{{end}} href="/logs">Logs</a>
         </li>
+        {{end}}
         <li>
           <a href="/admin/logout">Logout</a>
         </li>
