--- a/static/admin/style.css
+++ b/static/admin/style.css
@@ -46,7 +46,7 @@ td p {
     top: 0;
     left: 0;
     width: 100%;
-    height: 70px;
+    height: auto;
     z-index: 9999;
 }
 
@@ -54,6 +54,7 @@ td p {
     width: 100%;
     height: 100%;
     background: #0c141c;
+    padding: 17px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -70,11 +71,14 @@ td p {
     list-style: none;
     color: white;
     width: calc(100% - 100px);
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 
-#admin-header nav ul li a{
+#admin-header nav ul li a,
+#admin-header nav ul li span{
     color: white;
     font-weight: bold;
 }
@@ -198,8 +202,18 @@ form .submit-btn:hover {
 }
 
 @media (max-width:600px) {
+    #admin-header nav {
+        font-size: 15px;
+    }
+    #admin-header nav ul li span{
+        display: none;
+    }
     .wrapper .card-container {
         width: 90%;
+    }
+
+    #admin-header nav ul li span{
+        display: none;
     }
 
     form .input-wrapper {
@@ -538,6 +552,9 @@ form .form-group textarea::placeholder{
 }
 
 @media screen and (max-width:800px) {
+    #admin-header nav ul li span{
+        display: none;
+    }
     .svgs svg {
         width: clamp(20px,25px,40px);
         color: white;
