--- a/templates/admin/admin_head.html
+++ b/templates/admin/admin_head.html
@@ -1,10 +1,7 @@
 {{define "admin_head"}}
-<!-- PWA -->
 <link rel="icon" type="image/png" href="/static/admin/logo192.png"/>
-
-
 <!-- LOCAL -->
 <link rel="stylesheet" href="/static/admin/style.css">
-<link rel="preload" href="/static/tools/notification.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="/static/tools/notification.css"></noscript>
+
+{{template "admin_tools"}}
 {{end}}
