--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -134,8 +134,8 @@
 </div>
 
 <script src="/static/admin/jodit_editor.min.js"></script>
-{{template "admin_scripts" }}
 <script src="/static/admin/all_models.js"></script>
+{{template "pwa"}}
 
 
 </body>
