--- a/templates/admin/admin_single_model.html
+++ b/templates/admin/admin_single_model.html
@@ -47,9 +47,9 @@
 
 
 
-{{template "admin_scripts" }}
 <script src="/static/admin/jodit_editor.min.js"></script>
 <script src="/static/admin/single_model.js"></script>
+{{template "pwa"}}
 
 
 </body>
