--- a/templates/admin/admin_single_model.html
+++ b/templates/admin/admin_single_model.html
@@ -11,7 +11,11 @@
 </head>
 <body>
 {{ template "admin_nav" . }}
+
 {{$columns := .columns}}
+
+{{$pk := .pk}}
+
 <div class="wrapper">
   <a href="/admin/table/{{.model_name}}"><h1>{{.model_name}}</h1></a>
   <form id="myform" data-model="{{.model_name}}" data-id="{{.id}}" autocomplete="off">
@@ -19,7 +23,7 @@
     <div class="form-group">
       <label for="{{$key}}">{{$key}}:</label><div style="margin: 10px 0 10px 0;"></div>
       
-      {{if eq $key "id" "_id"  "password" "uuid" }}
+      {{if contains $key $pk  "password" "uuid" }}
       <input type="text" id="{{$key}}" name="{{$key}}" class='form-control' value="{{$value}}" disabled>
       {{else if or (contains (index $columns $key) "time" "Time")}}
       <input name="{{$key}}" id="{{$key}}" value="{{timeFormat $value}}" type="datetime-local" class='form-control input'>
