--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -68,13 +68,7 @@
               {{else if contains (index $columns $key) "bool"}}
                 <td>
                   {{$i = add $i 1}}
-                  <input id="check-{{$i}}" name="check-{{$i}}" type="checkbox" class="checkbox" {{if isTrue $value}}checked{{end}} disabled>
-                  <label style="display: none;" for="check-{{$i}}" >Checkbox</label>          
-                </td>
-              {{else if and (startWith (index $columns $key) "str") (startWith $key "is") (isBool $value)}}
-                <td>
-                  {{$i = add $i 1}}
-                  <input id="check-{{$i}}" name="check-{{$i}}" type="checkbox" class="checkbox" {{if isTrue $value}}checked{{end}} disabled>
+                  <input id="check-{{$i}}" name="check-{{$i}}" type="checkbox" class="checkbox" {{if eq $value 1}}checked{{end}} disabled>
                   <label style="display: none;" for="check-{{$i}}" >Checkbox</label>          
                 </td>
               {{else}}
