--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -71,7 +71,7 @@
                   <input id="check-{{$i}}" name="check-{{$i}}" type="checkbox" class="checkbox" {{if eq $value 1}}checked{{end}} disabled>
                   <label style="display: none;" for="check-{{$i}}" >Checkbox</label>          
                 </td>
-              {{else if contains (index $dbcolumns $col) "text"}}
+              {{else if contains (index $dbcolumns $key) "text"}}
                   <td>
                     <p style="overflow-wrap:break-word;max-width: 20vw;">
                       {{truncate $value 50}}
