--- a/templates/admin/admin_single_model.html
+++ b/templates/admin/admin_single_model.html
@@ -45,6 +45,7 @@
     {{end}}
     
     <button class="btn" style="border-radius: 20px;" type="submit">Update</button>
+    <div style="margin: 20px 0 20px 0;"></div>
   </form>
 
 </div>
