--- a/static/tools/notification.css
+++ b/static/tools/notification.css
@@ -1,14 +1,19 @@
 .notice{
   width: auto;
   position: fixed;
-  top: 10%;
+  top: 12%;
   left: -100%;
   opacity: 0;
-  background-color: #18191A;
   color: white;
   padding: 20px;
-  border-radius: 10px;
   overflow: hidden;
+  background: rgba(28, 28, 49, 0.3);
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(56, 102, 255, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid #3866ff;
+  font-size: clamp(10px,4vw,18px);
   }
   
   
@@ -20,6 +25,7 @@
 
 .notice strong {
     font-weight: 600;
+    padding-right: 10px;
 }
 
 .notice-success strong {
@@ -38,27 +44,24 @@
   
 @keyframes notify {
   0% {
-    top: 10%;
+    top: 12%;
     left: -100%;
     opacity: 0;
   }
 
   15% {
-    top: 10%;
     left: 10%;
     opacity: 1;
     z-index: 1000000;
   }
 
   90% {
-    top: 10%;
     left: 10%;
     opacity: 1;
     z-index: 1000000;
   }
 
   100% {
-    top: 10%;
     left: -100%;
     opacity: 0;
   }
