--- a/templates/admin/admin_tools_template.html
+++ b/templates/admin/admin_tools_template.html
@@ -3,4 +3,5 @@
 <noscript><link rel="stylesheet" href="/static/tools/notification.css"></noscript>
 <script src="/static/tools/getandpost.js" defer></script>
 <script src="/static/tools/notification.js" defer></script>
+<script src="/static/tools/ask.js" defer></script>
 {{end}}
