--- a/templates/admin/admin_single_model.html
+++ b/templates/admin/admin_single_model.html
@@ -36,7 +36,7 @@
         <input style="height: 30px;" type="checkbox" name="{{$key}}" id="{{$key}}" class="form-check-input input" {{if $value}}checked{{end}}>
       </div>
       {{else if contains (index $dbcolumns $key) "text"}}
-      <div id="editor" data-key="{{$key}}" data-val="{{$value}}"></div>
+      <textarea class="editor" data-key="{{$key}}" data-val="{{$value}}"></textarea>
       {{else}}
         <input type="text" id="{{$key}}" name="{{$key}}" class='form-control input' value="{{$value}}">
       {{end}}
