--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -41,7 +41,7 @@
   </div>
 
   <form class="search-input">
-    <input type="text" placeholder="Search..." class="form-control input">
+    <input type="text" placeholder="email='any' or id=5 ..." class="form-control input">
     <button class="btn" type="submit">Search</button>
   </form>
 
