--- a/static/admin/style.css
+++ b/static/admin/style.css
@@ -228,6 +228,9 @@ form .submit-btn:hover {
     .table td img {
         width: 100%;
     }
+    .search-input {
+        padding: 0 30px;
+    }
 }
 
 /* Admin index */
@@ -594,6 +597,7 @@ body > div.wrapper > div.table-container > table > tbody > tr > td > p {
     min-width: 150px;
     width: 100%;
     margin-bottom: 40px;
+    padding: 0 10px;
     display: flex;
     gap: 2rem;
 }
